Multi gradle setup (#1)
## Description
<!-- Provide a brief description of the changes made in this PR. -->
Refactored the Entire code to a Multi Gradle Setup, which allows me to
hide certain Modules and make certain Modules Public to allow
Modifications on my app, without revealing the entire source code.

## Changes
- **Change 1**: Refactored Everything into a Multi Gradle Setup
- **Change 2**: Fixed the Padding of the ButtonPanel in the TitleBar.
- **Change 3**: Refactored the Content Browser for Utils Compatibility
for future use.
- **Change 4**: Added my Utils Classes regarding Case Conversion and
Math.
- **Change 5**: Added 2 Constant files in my Common Module.
- **Change 6**: Added some Markdown Files like, CONTRIBUTING,
PULLREQUESTEMPLATE, ISSUETEMPLATE etc etc.
- **Change 7**: Added Custom Configurations, buildApp and runApp for
more freedom.

## How has this been tested?
<!-- Describe the tests that you ran to verify your changes. -->
Tested using my Custom Configurations "buildApp" and "runApp".

## Type of Change
- [ x ] Bug fix
- [ x ] New feature
- [ ] Documentation update

## Checklist
- [x] My code follows the style guidelines of this project.
[Contributing](https://github.com/MeAlam1/BlueNode/blob/Production/CONTRIBUTING.md)
- [x] I have performed a self-review of my own code.
- [x] I have commented my code following the guidelines.
[Contributing](https://github.com/MeAlam1/BlueNode/blob/Production/CONTRIBUTING.md)
- [x] My changes generate no new warnings.

## Related Issues
<!-- List any issues that this PR is related to or closes. -->