@@ -1,37 +1,49 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'java'
+    id 'org.openjfx.javafxplugin' version "${javafx_plugins_version}"
 }
 
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-
-    implementation 'com.google.guava:guava:32.0.0-android'
-    implementation 'org.openjfx:javafx-controls:23'
-    implementation 'org.openjfx:javafx-fxml:23'
-    implementation 'org.reflections:reflections:0.9.12'
-
+allprojects {
+    repositories {
+        mavenCentral()
+    }
 }
 
 application {
-    mainClass = 'BlueNode.BlueNode'
+    mainClass = "${group_id}.${start_class}"
+}
+
+dependencies {
+    implementation project(':ui')
+
+    implementation "org.openjfx:javafx-controls:${javafx_dependency_version}"
+    implementation "org.openjfx:javafx-fxml:${javafx_dependency_version}"
 }
 
 javafx {
-    version = '22.0.2'
-    modules = ['javafx.web', 'javafx.swing']
+    version = javafx_version
+    modules = javafx_modules.split(',')
 }
 
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'BlueNode.BlueNode',
-                'Application-Version': '1.0.0',
-                'Implementation-Vendor': 'MeAlam'
-        )
+tasks.register('runApp', JavaExec) {
+    group = 'application'
+    description = 'Run the application with JavaFX support'
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = "${group_id}.${start_class}"
+
+    jvmArgs = [
+            '--module-path', configurations.runtimeClasspath.asPath,
+            '--add-modules', javafx_modules
+    ] as List<String>
+}
+
+tasks.register('buildApp') {
+    group = 'build'
+    description = 'Build the application'
+    dependsOn tasks.named('build')
+
+    doLast {
+        println "Build complete!"
     }
 }
